--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -396,7 +396,7 @@ Lastly, the external thinking dimension was more correlated with the Cough/Sneez
 The studies within our sample used the Body Perception Questionnaire short-form (BPQ-SF) and the very-short form (BPQ-VSF) to assess interoception [@cabrera2018assessing]. 
 The BPQ-SF comprised of 46 items on a 5-point Likert scale assessing body awareness (26 items) and autonomic reactivity (21 items). 
 The BPQ-VSF comprises of 12 items from the body awareness subscale of the BPQ-SF.
-In this study, all scores assessing these two dimensions were grouped together, hence no disitintion is made between awareness measured with the BPQ-SF and the BPQ-VSF.
+In this study, all scores assessing these two dimensions were grouped together, hence no disitintion is made between awareness measured with the BPQ-SF and the BPQ-VSF, or eith scores obtained only using the awareness subscale. 
 
 **note to add:** discuss later
 
