--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -5,7 +5,15 @@
 	author = {Brown, Mike},
 	year = {2012},
 }
-
+@article{brotherton2013measuring,
+  title={Measuring belief in conspiracy theories: The generic conspiracist beliefs scale},
+  author={Brotherton, Robert and French, Christopher C and Pickering, Alan D},
+  journal={Frontiers in psychology},
+  volume={4},
+  pages={279},
+  year={2013},
+  publisher={Frontiers Media SA}
+}
 @article{kroenke2007anxiety,
   title={Anxiety disorders in primary care: prevalence, impairment, comorbidity, and detection},
   author={Kroenke, Kurt and Spitzer, Robert L and Williams, Janet BW and Monahan, Patrick O and L{\"o}we, Bernd},
@@ -15,6 +23,16 @@
   pages={317--325},
   year={2007},
   publisher={American College of Physicians}
+}
+@article{makowski2023structure,
+  title={The structure of deception: Validation of the lying profile questionnaire},
+  author={Makowski, Dominique and Pham, Tam and Lau, Zen J and Raine, Adrian and Chen, SH Annabel},
+  journal={Current Psychology},
+  volume={42},
+  number={5},
+  pages={4001--4016},
+  year={2023},
+  publisher={Springer}
 }
 
 @article{zsido2020development,
