--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -149,19 +149,17 @@ knitr::include_graphics("figures/MeasuringInteroception.jpg")
 
 Although the use of subjective self-report questionnaires to measure deeply embodied functions might seem paradoxical at first, recent redefinitions of interoception emphasize the role of high-level and metacognitive elaboration of interoceptive information.
 These redefinitions provide theoretical grounding to support the idea that some facets of interoception, including participants' metacognitive beliefs, can be assessed subjectively [@khalsa2018interoception; @suksasilp2022towards].
-<!-- lack of correlation between objective and subjective measures + lack of correlation between self-report measures-->
-Moreover, the notion that self-reports might not reflect the same processes as other interoception tasks might be important to contextualize the apparent lack of convergence between measures in the field [@desmedt2022measures]. For instance, existing findings typically show weak or no correlations between questionnaires and objective measures [including for measures of the same theorethical dimensions, e.g., task-based accuracy vs. self-reported accuracy, @murphy2019; @brand2023], such as the Heartbeat Counting Task [HCT, @schandry1981heart] and the Heartbeat Detection Task [HDT, @kleckner2015methodological].
+Moreover, the notion that self-reports might not reflect the same processes as other interoception tasks might be important to contextualize the apparent lack of convergence between measures in the field [@desmedt2022measures]. For instance, existing findings typically show weak or no correlations between questionnaires and objective measures [including for measures of the same theorethical dimensions, e.g., task-based accuracy vs. self-reported accuracy, @murphy2019; @brand2023], such as the Heartbeat Counting Task [HCT, @schandry1981heart] and the Heartbeat Detection Task [HDT, @kleckner2015methodological]. 
+Perhaps more surprisingly, low correlations have been observed even among questionnaires, suggesting the targeting of different facets related to interoception. 
 
-Even among self-report measures low correlations have been observed, suggesting that these measures, while group in the same umbrella term of self-report assess different facets of interoception. 
-A recent systematic review by @desmedt2022measures examined whether various questionnaires designed to assess "interoceptive sensibility" truly measure the same construct. 
-Notably, @garfinkel2015knowing defines interoceptive sensibility as the self-reported tendency to focus on and detect internal sensations, whereas @khalsa2018interoception defines it more narrowly, excluding the ability to detect these signals. According to @desmedt2022measures, most authors adopt the latter definition. 
-The review found that these questionnaires measure related but distinct constructs, leading researchers to mistakenly treating them as equivalent measures of interoceptive sensibility. 
-A better understanding of what is being measured with different questionnaires and dimensions, as well as their potential overlaps with other constructs (e.g., alexithymia, body awareness), is thus needed to clarify the role of self-reports in the assessment of interoception. 
+One striking example concerns the assessment of "interoceptive sensibility", defined as the self-reported tendency to focus on and detect internal sensations [@garfinkel2015knowing], or more narrowly as the subjective ability to focus on interoceptive signals [@khalsa2018interoception]. **TODO: ANA check if the definitions are correct**.
+A recent systematic review suggested that various questionnaires [**WHICH ONES**] designed to assess this dimension actually measure distinct constructs, leading researchers to mistakenly treating them as equivalent measures [@desmedt2022measures].
+This underlines the need for a more comprehensive understanding of what is being measured with different questionnaires and dimensions, as well as their potential overlaps with other constructs (e.g., alexithymia, body awareness). 
 
 <!-- Introducing the IAS -->
 
 A recently developed scale with a rapidly growing popularity is the Interoceptive Accuracy Scale [IAS, @murphy2019].
-The IAS consists of 21 Likert-scale items that query how accurately one can perceive different bodily signals, with one item per physiological modality such as respiration (*"I can always accurately perceive when I am breathing fast"*), heart (e.g *"I can always accurately perceive when my heart is beating fast"*), skin (e.g *"I can always accurately perceive when something is going to be ticklish"*), arousal or bodily functions like coughing (e.g *"I can always accurately perceive when I am going to cough"*) or urinating (e.g. *"I can always accurately perceive when I need to urinate"*).
+The IAS consists of 21 Likert-scale items that query how accurately one can perceive different bodily signals, with one item per physiological modality such as respiration (*"I can always accurately perceive when I am breathing fast"*), heart (*"I can always accurately perceive when my heart is beating fast"*), skin (*"I can always accurately perceive when something is going to be ticklish"*), arousal or bodily functions like coughing (*"I can always accurately perceive when I am going to cough"*) or urinating (*"I can always accurately perceive when I need to urinate"*).
 Interestingly, the IAS' statements are about specific interoceptive behaviours, which is a notable difference with other popular interoception questionnaires, such as the Multidimensional Assessment of Interoceptive Awareness scale [MAIA, @mehling2012; MAIA-2, @mehling2018multidimensional], which contains more general and metacognitive items (e.g., *"I trust my body sensations"*, *"I can notice an unpleasant body sensation without worrying about it"*).
 
 <!-- IAS structure  -->
